--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,30 +6,26 @@
   <title>Task Manager</title>
 </head>
 <body>
-<div class="container">
-  <h1>Your Tasks</h1>
-  <div class="d-flex align-items-center">
-        <ul>
-          <% @tasks.each do |task| %>
-          <li class="list-style: none">
-            <input type="checkbox" class="form-check-input">
-            <label class="form-check-label"></label>
-
-            <%= link_to task.title, task_path(task) %>
-
-            <%= link_to "", task_path(task), class: "glyphicon glyphicon-trash" , method: :delete, data: { confirm: "Are you sure? "} %>
-            </li>
-          <% end %>
-        </ul>
+  <div class="container">
+    <h1>Your Tasks</h1>
+    <div class="d-flex align-items-center">
+          <ul>
+            <% @tasks.each do |task| %>
+            <li class="list-unstyled">
+              <% if task.completed == false %>
+              <input type="checkbox" class="custom-control-input" id="defaultUncheckedDisabled2" disabled>
+              <label class="custom-control-label" for="defaultUncheckedDisabled2"></label>
+              <% else %>
+              <input type="checkbox" class="custom-control-input" id="defaultCheckedDisabled2" checked disabled>
+              <label class="custom-control-label" for="defaultCheckedDisabled2"></label>
+              <% end %>
+              <%= link_to task.title, task_path(task) %>
+              <%= link_to "", task_path(task), class: "glyphicon glyphicon-trash" , method: :delete, data: { confirm: "Are you sure? "} %>
+              </li>
+            <% end %>
+          </ul>
+    </div>
+    <%= link_to "Create new task", new_task_path %>
   </div>
-  <%= link_to "Create new task", new_task_path %>
-</div>
-
-
-
-
-
-
 </body>
-
 </html>
